--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container__box">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                 único.</h1>
-            <img src="assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__image">
+            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__image">
             <a href="www.alura.com.br" class="container__button">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__button secondary_button">Assinar somente o Alura+</a>
             <p class="container__notice">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
@@ -21,7 +21,7 @@
     </section>
 
     <section class="container secundary">
-        <img src="assets/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta"
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta"
             class="secundary__image">
         <div class="container__descricao">
             <h2 class="description__title">Assista do seu jeito</h2>
@@ -38,11 +38,11 @@
             </p>
             <a href="www.alura.com.br" class="container__button secundary__button">Assine o Combo+</a>
         </div>
-        <img src="assets/Telas.png" alt="Tela do alura+ e alura língua" class="secundary__image">
+        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundary__image">
     </section>
 
     <section class="container secundary">
-        <img src="assets/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundary__image">
         <div class="container__description">
             <h2 class="description__title">Baixe seus cursos</h2>
@@ -55,23 +55,23 @@
         <h2 class="devices_titles">Disponível nos seus dispositivos favoritos</h2>
         <ul class="devices__list">
             <li>
-                <img src="assets/tv.png" alt="icone televisao">
+                <img src="img/tv.png" alt="icone televisao">
                 <h3 class="list__itens">TV</h3>
             </li>
 
             <li>
-                <img src="assets/computador.png" alt="icone de um computador">
+                <img src="img/computador.png" alt="icone de um computador">
                 <h3 class="list__itens">Computador</h3>
             </li>
             <li>
-                <img src="assets/celular.png" alt="icone de um Smartphone">
+                <img src="img/celular.png" alt="icone de um Smartphone">
                 <h3 class="list__itens">Celular</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="assets/Logo.png" alt="Alura+" class="rodape__logo">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
                 <a href="#">Idioma</a>
