adding responsiveness to the Alura Plus website

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         </ul>
     </section>
 
-    <footer class="rodape">
+    <footer class="baseboard">
         <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
-        <ul class="rodape__lista">
+        <ul class="baseboard__list">
             <li class="lista__link">
                 <a href="#">Idioma</a>
             </li>
